--- a/index.html
+++ b/index.html
@@ -30,12 +30,125 @@
 			<img src="images/telbg.png" alt="" />
 			<p>021-51870009</p>
 		</div>
+		<div class="nav">
+			<ul>
+				<li>首页</li>
+				<li>公司简介</li>
+				<li>工艺介绍</li>
+				<li>成功案例</li>
+				<li>行业新闻</li>
+				<li>在线订单</li>
+				<li>联系我们</li>
+			</ul>
+		</div>
 	</div>
 
 	<div class="banner">
 		<img src="images/banner.png" alt="">
 	</div>
 
-	
+	<div class="main">
+		<div class="we">
+			<div class="company">
+				<h1>公司简介<span>+MORE</span></h1>
+				<p>上海爱科陶建材有限公司是一家专业从事欧式建筑装饰的施工企业，由多位早在九十年代初即在国内从事欧式GRC构件技术及欧式模具技术的专业技术人员组成。因多年参与欧式GRC构件的研究应用，我们深感GRC构件工艺的不足，于上世纪九十年末成功开发出欧式仿石材整体现浇工艺系列施工方法。该工艺成功克服GRC构件薄壳挂件所产生的破损、脱落、开裂等弊病...</p>
+			</div>
+			<div class="file">
+				<img src="images/content.png" alt="" />
+			</div>
+			<div class="zhuangxiu">
+				<h1>装修课堂<span>+MORE</span></h1>
+				<ul>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="product">
+			<h2></h2>
+			<ul>
+				<li><a href="#">别墅系列</a></li>
+				<li><a href="#">海关系列</a></li>
+				<li><a href="#">法院系列</a></li>
+				<li><a href="#">检察院系列</a></li>
+				<li><a href="#">银行系列</a></li>
+				<li><a href="#">酒店系列</a></li>
+				<li><a href="#">其他建筑系列</a></li>
+			</ul>
+			<dl>
+				<dt><img src="images/photo01.png" alt="" /></dt>
+				<dd>欧式婚纱基地</dd>
+				<dt><img src="images/photo02.png" alt="" /></dt>
+				<dd>湖南省林业厅基地办公楼</dd>
+				<dt><img src="images/photo03.png" alt="" /></dt>
+				<dd>濮阳市文化中心大楼</dd>
+				<dt><img src="images/photo04.png" alt="" /></dt>
+				<dd>其它海关</dd>
+				<dt><img src="images/photo01.png" alt="" /></dt>
+				<dd>欧式婚纱基地</dd>
+				<dt><img src="images/photo02.png" alt="" /></dt>
+				<dd>湖南省林业厅基地办公楼</dd>
+				<dt><img src="images/photo03.png" alt="" /></dt>
+				<dd>濮阳市文化中心大楼</dd>
+				<dt><img src="images/photo04.png" alt="" /></dt>
+				<dd>其它海关</dd>
+				
+			</dl>
+		</div>
+
+		<div class="news">
+			<div class="pinjia">
+				<h2>客户评价<span>+MORE</span></h2>
+				<img src="images/cate01.png" alt="" />
+				<ul>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+				</ul>
+			</div>
+			<div class="cnew">
+				<h2>公司新闻<span>+MORE</span></h2>
+				<img src="images/cate02.png" alt="" />
+				<ul>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+				</ul>
+			</div>
+			<div class="hnew">
+				<h2>行业新闻<span>+MORE</span></h2>
+				<img src="images/cate03.png" alt="" />
+				<ul>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+					<li>资料整理中资料整理中...<span>2014-05-22</span></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
+	<div class="footer">
+		<h1><a href="#">爱科陶建材</a></h1>
+		<ul>
+				<li>首页</li>
+				<li>公司简介</li>
+				<li>工艺介绍</li>
+				<li>成功案例</li>
+				<li>行业新闻</li>
+				<li>在线订单</li>
+				<li>联系我们</li>
+		</ul>
+		<p>上海爱科陶建材有限公司版权所有    技术支持：速联科技</p>
+	</div>
+
+
 </body>
 </html>
