--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
 			</div>
 		</div>
 
-		<div class="navs">
-			<div class="container clearfix">
+		<div class="navs clearfix container">
 				<h2>装修案例</h2>
 				<ul>
 					<li><a href="#">别墅系列</a></li>
@@ -88,7 +87,7 @@
 					<li><a href="#">酒店系列</a></li>
 					<li><a href="#">其他建筑系列</a></li>
 				</ul>
-				</div>
+				
 		</div>
 				<div class="product container clearfix">
 					<dl>
@@ -169,13 +168,13 @@
 			</div>
 			<div class="two clearfix">
 				<ul>
-						<li>首页</li>
-						<li>公司简介</li>
-						<li>工艺介绍</li>
-						<li>成功案例</li>
-						<li>行业新闻</li>
-						<li>在线订单</li>
-						<li>联系我们</li>
+						<li><a href="#">首页</a></li>
+						<li><a href="#">公司简介</a></li>
+						<li><a href="#">工艺介绍</a></li>
+						<li><a href="#">成功案例</a></li>
+						<li><a href="#">行业新闻</a></li>
+						<li><a href="#">在线订单</a></li>
+						<li><a href="#">联系我们</a></li>
 						
 				</ul>
 				<p>上海爱科陶建材有限公司版权所有    技术支持：速联科技</p>
